[package]
name = "band-fest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.11.5"
dotenv = { version = "0.15.0"}
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
env_logger = { version = "0.9.0", default-features = false }
